--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <figure>
                 <a href="#">
                     <span class="logo">
-                        <img src="/imagens/icone E.ico" alt=""></span>
+                        <img src="/imagens/logo_E.png" alt=""></span>
                 </a>
             </figure>
 
