--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <nav class="menu-lateral">
 
             <figure>
-                <a href="#">
+                <a href="###">
                     <span class="logo">
                         <img src="/imagens/logo_E.png" alt=""></span>
                 </a>
