--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="who-am-i" id="who-am-i">
             
             <div class="photo">
-                <img src="/71028987.jpg" alt="">
+                <img src="71028987.jpg" alt="">
             </div>
             
             <div class="about-me">
