--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <span> As a computer science student at the University of Vale do Itajaí (UNIVALI), 
                     I am focused on expanding my education and acquiring solid knowledge to face 
                     the challenges of the digital age. I am looking for hands-on experience in developing 
-                    and to develop my skills in algorithms, data structures, and information security. </span>
+                    and to enhance my skills in algorithms, data structures, and information security. </span>
             </div>
 
         </div>
