--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 
         <div class="div-glass">
             <a href="#">
-                <img class="proj-image" src="websites are under construction.png" alt="">
-                <h3 class="proj-name">PROJECT 2</h3>
-                <p class="descr-proj-text"></p>
+                <img class="proj-image" src="Logo Agencia.png" alt="">
+                <h3 class="proj-name">AGÊNCIA HEXTECH WEBSITE</h3>
+                <p class="descr-proj-text">The website was developed to represent our company, 
+                    which is the result of collaboration between myself and a friend. 
+                    Our mission is to create high-quality websites and e-commerce platforms, 
+                    providing efficient solutions to optimize the traffic for local businesses. </p>
             </a>
         </div>
 
