--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="div-glass">
-            <a href="#">
+            <a href="https://agenciahextech.com.br/" target="_blank">
                 <img class="proj-image" src="Logo Agencia.png" alt="">
                 <h3 class="proj-name">AGÊNCIA HEXTECH WEBSITE</h3>
                 <p class="descr-proj-text">The website was developed to represent our company, 
