--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
         <div class="div-glass">
             <a href="#">
-                <img class="proj-image" src="websites are under construction.png" alt="">
-                <h3 class="proj-name">PROJECT 3</h3>
-                <p class="descr-proj-text"></p>
+                <img class="proj-image" src="/loginpage.jpg" alt="">
+                <h3 class="proj-name">LOGIN PAGE</h3>
+                <p class="descr-proj-text">A Front-end login page for personal study <br> *UNDER DEVELOPMENT*</p>
             </a>
         </div>
 
