--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         </div>
 
         <div class="div-glass">
-            <a href="#">
-                <img class="proj-image" src="/loginpage.jpg" alt="">
+            <a href="https://erikgervasi.github.io/LoginPage/">
+                <img class="proj-image" src="loginpage.jpg" alt="">
                 <h3 class="proj-name">LOGIN PAGE</h3>
                 <p class="descr-proj-text">A Front-end login page for personal study <br> *UNDER DEVELOPMENT*</p>
             </a>
