--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="div-glass">
-            <a href="https://erikgervasi.github.io/LoginPage/">
+            <a href="https://erikgervasi.github.io/LoginPage/" target="_blank">
                 <img class="proj-image" src="loginpage.jpg" alt="">
                 <h3 class="proj-name">LOGIN PAGE</h3>
                 <p class="descr-proj-text">A Front-end login page for personal study <br> *UNDER DEVELOPMENT*</p>
