--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p class="descr-proj-text">The website was developed to represent our company, 
                     which is the result of collaboration between myself and a friend. 
                     Our mission is to create high-quality websites and e-commerce platforms, 
-                    providing efficient solutions to optimize the traffic for local businesses. </p>
+                    providing efficient solutions to optimize the traffic for local businesses. (Temporarily offline) </p>
             </a>
         </div>
 
