--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="div-glass">
             <a href="#">
                 <img class="proj-image" src="websites are under construction.png" alt="">
-                <h3 class="proj-name">PROJECT 6</h3>
+                <h3 class="proj-name">PROJECT 6.</h3>
                 <p class="descr-proj-text"></p>
             </a>
         </div>
