--- a/index.html
+++ b/index.html
@@ -14,6 +14,25 @@
 
 <body>
 
+    <h1 class="text-who-am-i">WHO AM I?</h1>
+
+
+    <div class="who-am-i" id="who-am-i">
+
+        <div class="photo">
+            <img src="71028987.jpg" alt="">
+        </div>
+        <span class="name">Erik Luiz Gervasi</span>
+
+        <div class="about-me">
+            <span> As a computer science student at the University of Vale do Itajaí (UNIVALI),
+                I am focused on expanding my education and acquiring solid knowledge to face
+                the challenges of the digital age. I am looking for hands-on experience in developing
+                and to enhance my skills in algorithms, data structures, and information security. </span>
+        </div>
+
+    </div>
+
     <div>
         <h1 class="text-myprojects">MY
             <br>
@@ -82,10 +101,6 @@
 
     <!-- Projetos ^ -->
 
-    <br>
-    <br>
-    <br>
-
     <div>
         <h1 class="text-mytechnologies">TECHNOLOGIES I HAVE
             <br>
@@ -129,24 +144,6 @@
 
     </div>
     <!-- Tecnologias que uso ^ -->
-
-    <h1 class="text-who-am-i">WHO AM I?</h1>
-
-
-    <div class="who-am-i" id="who-am-i">
-
-        <div class="photo">
-            <img src="71028987.jpg" alt="">
-        </div>
-
-        <div class="about-me">
-            <span> As a computer science student at the University of Vale do Itajaí (UNIVALI),
-                I am focused on expanding my education and acquiring solid knowledge to face
-                the challenges of the digital age. I am looking for hands-on experience in developing
-                and to enhance my skills in algorithms, data structures, and information security. </span>
-        </div>
-
-    </div>
 
     <br>
     <br>
