--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="who-am-i" id="who-am-i">
 
         <div class="photo">
-            <img src="71028987.jpg" alt="">
+            <img src="/imagens/71028987.jpg" alt="">
         </div>
         <span class="name">Erik Luiz Gervasi</span>
 
@@ -43,7 +43,7 @@
     <div class="proj-line">
         <div class="div-glass">
             <a href="https://erikgervasi.github.io/API_Weather_Forecast/" target="_blank">
-                <img class="proj-image" src="Proj-API-Weather.png" alt="">
+                <img class="proj-image" src="/imagens/Proj-API-Weather.png" alt="">
                 <h3 class="proj-name">WEATHER FORECAST</h3>
                 <p class="descr-proj-text">Simple and minimalistic weather forecast using OpenWeather API</p>
             </a>
@@ -51,7 +51,7 @@
 
         <div class="div-glass">
             <a href="https://agenciahextech.com.br/" target="_blank">
-                <img class="proj-image" src="Logo Agencia.png" alt="">
+                <img class="proj-image" src="/imagens/Logo Agencia.png" alt="">
                 <h3 class="proj-name">AGÊNCIA HEXTECH WEBSITE</h3>
                 <p class="descr-proj-text">The website was developed to represent our company, 
                     which is the result of collaboration between myself and a friend. 
@@ -62,7 +62,7 @@
 
         <div class="div-glass">
             <a href="https://erikgervasi.github.io/LoginPage/" target="_blank">
-                <img class="proj-image" src="loginpage.jpg" alt="">
+                <img class="proj-image" src="/imagens/loginpage.jpg" alt="">
                 <h3 class="proj-name">LOGIN PAGE</h3>
                 <p class="descr-proj-text">A Front-end login page for personal study <br> *UNDER DEVELOPMENT*</p>
             </a>
@@ -73,7 +73,7 @@
     <div class="proj-line">
         <div class="div-glass">
             <a href="https:\\www.grupomsservicos.com.br" target="_blank">
-                <img class="proj-image" id="dif-image" src="Logo Improvisada.png" alt="">
+                <img class="proj-image" id="dif-image" src="/imagens/Logo Improvisada.png" alt="">
                 <h3 class="proj-name">MS SERVIÇOS WEBSITE</h3>
                 <p class="descr-proj-text">A Freelance Custom Website Under Development for a Multiservice Company</p>
             </a>
@@ -81,7 +81,7 @@
 
         <div class="div-glass">
             <a href="#">
-                <img class="proj-image" src="imagens/unnamed.jpg" alt="">
+                <img class="proj-image" src="unnamed.jpg" alt="">
                 <h3 class="proj-name">UNIVALI Technical Test</h3>
                 <p class="descr-proj-text">I developed this project as part of a technical test for UNIVALI. 
                     The challenge was to create a CRUD system using JavaScript. I used technologies such as LocalStorage, 
@@ -91,7 +91,7 @@
 
         <div class="div-glass">
             <a href="#">
-                <img class="proj-image" src="websites are under construction.png" alt="">
+                <img class="proj-image" src="/imagens/websites are under construction.png" alt="">
                 <h3 class="proj-name">PROJECT 6.</h3>
                 <p class="descr-proj-text"></p>
             </a>
@@ -110,17 +110,17 @@
 
     <div class="tech-line">
         <div class="div-glass">
-            <img class="tech-image" src="Design_sem_nome-removebg-preview.png" alt="">
+            <img class="tech-image" src="/imagens/Javascript.png" alt="">
             <h3 class="tech-name">JAVASCRIPT</h3>
         </div>
 
         <div class="div-glass">
-            <img class="tech-image" src="html5.png" alt="">
+            <img class="tech-image" src="/imagens/html5.png" alt="">
             <h3 class="tech-name">HTML</h3>
         </div>
 
         <div class="div-glass">
-            <img class="tech-image" src="CSS3.png" alt="">
+            <img class="tech-image" src="/imagens/CSS3.png" alt="">
             <h3 class="tech-name">CSS</h3>
         </div>
 
@@ -128,17 +128,17 @@
 
     <div class="tech-line">
         <div class="div-glass">
-            <img class="tech-image" src="C++.png" alt="">
+            <img class="tech-image" src="/imagens/C++.png" alt="">
             <h3 class="tech-name">C++</h3>
         </div>
 
         <div class="div-glass">
-            <img class="tech-image" src="Design_sem_nome-removebg-preview N.png" alt="">
-            <h3 class="tech-name">NODE.JS</h3>
+            <img class="tech-image" src="/imagens/kotlin.png" alt="">
+            <h3 class="tech-name">KOTLIN</h3>
         </div>
 
         <div class="div-glass">
-            <img class="tech-image" src="java.png" alt="">
+            <img class="tech-image" src="/imagens/java.png" alt="">
             <h3 class="tech-name">JAVA</h3>
         </div>
 
@@ -153,7 +153,7 @@
         <figure>
             <a href="###">
                 <span class="logo">
-                    <img src="logo_E.png" alt=""></span>
+                    <img src="/imagens/logo_E.png" alt=""></span>
             </a>
         </figure>
 
