--- a/index.html
+++ b/index.html
@@ -4,107 +4,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Erik Gervasi</title>
+    <title>Portfólio Erik Gervasi</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="shortcut icon" type="imagex/png" href="icone E.ico">
-
 </head>
 
 <body>
 
-    <h1 class="text-who-am-i">WHO AM I?</h1>
-
+    <h1 class="text-who-am-i">QUEM SOU EU?</h1>
 
     <div class="who-am-i" id="who-am-i">
-
         <div class="photo">
             <img src="/imagens/71028987.jpg" alt="">
         </div>
         <span class="name">Erik Luiz Gervasi</span>
 
         <div class="about-me">
-            <span> As a computer science student at the University of Vale do Itajaí (UNIVALI),
-                I am focused on expanding my education and acquiring solid knowledge to face
-                the challenges of the digital age. I am looking for hands-on experience in developing
-                and to enhance my skills in algorithms, data structures, and information security. </span>
+            <span>Como estudante de Ciência da Computação na Universidade do Vale do Itajaí (UNIVALI),
+                estou focado em expandir minha formação e adquirir conhecimento sólido para enfrentar
+                os desafios da era digital. Busco experiência prática em desenvolvimento
+                e aprimoramento das minhas habilidades em algoritmos, estruturas de dados e segurança da informação.</span>
         </div>
-
     </div>
 
     <div>
-        <h1 class="text-myprojects">MY
+        <h1 class="text-myprojects">MEUS
             <br>
-            PROJECTS
+            PROJETOS
         </h1>
     </div>
 
     <div class="proj-line">
         <div class="div-glass">
-            <a href="https://erikgervasi.github.io/API_Weather_Forecast/" target="_blank">
-                <img class="proj-image" src="/imagens/Proj-API-Weather.png" alt="">
-                <h3 class="proj-name">WEATHER FORECAST</h3>
-                <p class="descr-proj-text">Simple and minimalistic weather forecast using OpenWeather API</p>
+            <a href="https://find-cnpj.vercel.app/" target="_blank">
+                <img class="proj-image" src="/imagens/Logo find CNPJ.jpg" alt="">
+                <h3 class="proj-name">FIND CNPJ</h3>
+                <p class="descr-proj-text">Find CNPJ é uma aplicação web desenvolvida para simplificar o processo de consulta de informações de empresas no Brasil usando o número do CNPJ.
+                    Exibe rapidamente dados importantes como nome da empresa, endereço, situação cadastral e inscrição estadual.
+                    Novas funcionalidades estão em desenvolvimento, incluindo leitura de notas fiscais (NF), para tornar a ferramenta ainda mais completa.</p>
             </a>
         </div>
 
         <div class="div-glass">
             <a href="https://agenciahextech.com.br/" target="_blank">
                 <img class="proj-image" src="/imagens/Logo Agencia.png" alt="">
-                <h3 class="proj-name">AGÊNCIA HEXTECH WEBSITE</h3>
-                <p class="descr-proj-text">The website was developed to represent our company, 
-                    which is the result of collaboration between myself and a friend. 
-                    Our mission is to create high-quality websites and e-commerce platforms, 
-                    providing efficient solutions to optimize the traffic for local businesses. (Temporarily offline) </p>
+                <h3 class="proj-name">SITE AGÊNCIA HEXTECH</h3>
+                <p class="descr-proj-text">O site foi desenvolvido para representar nossa empresa,
+                    que é fruto da colaboração entre eu e um amigo.
+                    Nossa missão é criar sites e plataformas de e-commerce de alta qualidade,
+                    oferecendo soluções eficientes para otimizar o tráfego de negócios locais. (Temporariamente fora do ar)</p>
             </a>
         </div>
 
         <div class="div-glass">
             <a href="https://erikgervasi.github.io/LoginPage/" target="_blank">
                 <img class="proj-image" src="/imagens/loginpage.jpg" alt="">
-                <h3 class="proj-name">LOGIN PAGE</h3>
-                <p class="descr-proj-text">A Front-end login page for personal study <br> *UNDER DEVELOPMENT*</p>
+                <h3 class="proj-name">PÁGINA DE LOGIN</h3>
+                <p class="descr-proj-text">Uma página de login front-end para estudos pessoais </p>
             </a>
         </div>
-
     </div>
 
     <div class="proj-line">
         <div class="div-glass">
-            <a href="https:\\www.grupomsservicos.com.br" target="_blank">
-                <img class="proj-image" id="dif-image" src="/imagens/Logo Improvisada.png" alt="">
-                <h3 class="proj-name">MS SERVIÇOS WEBSITE</h3>
-                <p class="descr-proj-text">A Freelance Custom Website Under Development for a Multiservice Company</p>
+            <a href="https://erikgervasi.github.io/API_Weather_Forecast/" target="_blank">
+                <img class="proj-image" src="/imagens/Proj-API-Weather.png" alt="">
+                <h3 class="proj-name">PREVISÃO DO TEMPO</h3>
+                <p class="descr-proj-text">Aplicação simples e minimalista de previsão do tempo usando a API do OpenWeather</p>
             </a>
         </div>
 
         <div class="div-glass">
             <a href="#">
-                <img class="proj-image" src="unnamed.jpg" alt="">
-                <h3 class="proj-name">UNIVALI Technical Test</h3>
-                <p class="descr-proj-text">I developed this project as part of a technical test for UNIVALI. 
-                    The challenge was to create a CRUD system using JavaScript. I used technologies such as LocalStorage, 
-                    jQuery, jQuery Inputmask, SweetAlert, and followed best development practices. The result is an efficient and intuitive application.</p>
+                <img class="proj-image" src="imagens/univali.jpg" alt="">
+                <h3 class="proj-name">Teste Técnico UNIVALI</h3>
+                <p class="descr-proj-text">Desenvolvi este projeto como parte de um teste técnico para a UNIVALI.
+                    O desafio foi criar um sistema CRUD utilizando JavaScript. Usei tecnologias como LocalStorage,
+                    jQuery, jQuery Inputmask, SweetAlert, e segui boas práticas de desenvolvimento. O resultado é uma aplicação eficiente e intuitiva.</p>
             </a>
         </div>
 
         <div class="div-glass">
             <a href="#">
                 <img class="proj-image" src="/imagens/websites are under construction.png" alt="">
-                <h3 class="proj-name">PROJECT 6.</h3>
+                <h3 class="proj-name">PROJETO 6.</h3>
                 <p class="descr-proj-text"></p>
             </a>
         </div>
-
     </div>
 
-    <!-- Projetos ^ -->
-
     <div>
-        <h1 class="text-mytechnologies">TECHNOLOGIES I HAVE
+        <h1 class="text-mytechnologies">TECNOLOGIAS QUE EU JÁ
             <br>
-            ALREADY USED
+            UTILIZEI
         </h1>
     </div>
 
@@ -123,7 +117,6 @@
             <img class="tech-image" src="/imagens/CSS3.png" alt="">
             <h3 class="tech-name">CSS</h3>
         </div>
-
     </div>
 
     <div class="tech-line">
@@ -141,15 +134,12 @@
             <img class="tech-image" src="/imagens/java.png" alt="">
             <h3 class="tech-name">JAVA</h3>
         </div>
-
     </div>
-    <!-- Tecnologias que uso ^ -->
 
     <br>
     <br>
 
     <nav class="menu-lateral">
-
         <figure>
             <a href="###">
                 <span class="logo">
@@ -163,9 +153,8 @@
                     <span class="icon">
                         <i class="bi bi-house"></i>
                     </span>
-                    <span class="txt-link">HOME</span>
+                    <span class="txt-link">INÍCIO</span>
                 </a>
-
             </li>
 
             <li class="item-menu">
@@ -181,7 +170,6 @@
                 <a href="https://github.com/ErikGervasi" target="_blank">
                     <span class="icon">
                         <i class="bi bi-github"></i>
-                        </i>
                     </span>
                     <span class="txt-link">GITHUB</span>
                 </a>
@@ -201,18 +189,12 @@
                     <span class="icon">
                         <i class="bi bi-laptop"></i>
                     </span>
-                    <span class="txt-link">WHO AM I?</span>
+                    <span class="txt-link">QUEM SOU EU?</span>
                 </a>
-
             </li>
-
         </ul>
-
     </nav>
-    <!-- menu lateral ^ -->
-
 
 </body>
-
 
 <script src="script.js"></script>
